[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/actors/objects/koopa_troopa/koopa_troopa.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/koopa_troopa/regular_frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/actors/objects/bullet_bill/sound.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/objects/koopa_troopa/color_frames.tres" type="SpriteFrames" id=4]
[ext_resource path="res://scenes/actors/objects/koopa_troopa/para_color_frames.tres" type="SpriteFrames" id=5]
[ext_resource path="res://scenes/actors/objects/koopa_troopa/para_regular_frames.tres" type="SpriteFrames" id=6]

[sub_resource type="RayShape2D" id=1]
length = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.5, 9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18, 16 )

[node name="KoopaTroopa" type="Node2D"]
z_index = -2
script = ExtResource( 1 )
normal_sprite = ExtResource( 2 )
normal_color_sprite = ExtResource( 4 )
para_sprite = ExtResource( 6 )
para_color_sprite = ExtResource( 5 )

[node name="Koopa" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 2147483733

[node name="Sprite" type="AnimatedSprite" parent="Koopa"]
frames = ExtResource( 2 )
playing = true

[node name="Color" type="AnimatedSprite" parent="Koopa/Sprite"]
modulate = Color( 0, 1, 0, 1 )
frames = ExtResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Koopa"]
position = Vector2( -6.5, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Koopa"]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Koopa"]
position = Vector2( 6.5, 0 )
shape = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="Koopa"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Koopa/AttackArea"]
position = Vector2( 0, 7 )
shape = SubResource( 3 )

[node name="StompArea" type="Area2D" parent="Koopa"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Koopa/StompArea"]
position = Vector2( 0, -4 )
shape = SubResource( 4 )

[node name="ShellDetector" type="Area2D" parent="Koopa"]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Koopa/ShellDetector"]
shape = SubResource( 5 )

[node name="WaterDetector" type="Area2D" parent="Koopa"]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Koopa/WaterDetector"]
position = Vector2( 0, 7 )
shape = SubResource( 3 )

[node name="Left" type="RayCast2D" parent="Koopa"]
position = Vector2( -14, 14 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 81

[node name="Right" type="RayCast2D" parent="Koopa"]
position = Vector2( 14, 14 )
enabled = true
cast_to = Vector2( 0, 32 )
collision_mask = 2147483729

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Koopa"]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Koopa"]
rect = Rect2( -200, -200, 400, 400 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -200, -200, 400, 400 )
process_parent = true
physics_process_parent = true
